--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "chartjs-node-canvas": "^5.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
