--- a/folder1/package.json
+++ b/folder1/package.json
@@ -11,6 +11,7 @@
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "marked": "^16.1.1",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
